# codechallenge2025

./: Makefile  README.md  pyproject.toml
.github/workflows/: test-challenge.yml
src/codechallenge2025/: __init__.py  dataset_generator.py  dummy_solution.py  participant_solution.py
tests/: run_challenge.py  update_leaderboard.py
